04-hay que arreglar todo optimizar

--- a/Encrypt.html
+++ b/Encrypt.html
@@ -21,7 +21,7 @@
 
             <div class="grid-item2">
                 <textarea class="textarea1" id="encriptar "type="text"placeholder="Ingrese el texto que deseas encriptar aquí"  > </textarea>
-                
+               <h6> Solo letras minúsculas y sin acento</h6> 
                 <div class="buttons">
                     <input class="boton1" type="submit" value="Encriptar"></input>
 
@@ -32,8 +32,10 @@
             </div>
             
             <div class="grid-item3">
-               <!-- textarea 2 <textarea class="textarea2" type="text" placeholder="Escribe aquí"> </textarea>-->
+               <textarea class="textarea2" type="text" placeholder="Escribe aquí"> </textarea>
+               <div>
                 <input type="submit" value="Desencriptar"></input>
+            </div>
             </div>
         </div>
     </section>
