--- a/index.html
+++ b/index.html
@@ -5,6 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+<script>
+/*
+
+    // ENCRIPTADOR //
+    
+    let text_encr= "gato"
+
+    function encr()
+    {
+        text_encr = text_encr.replace(/e/ig, "enter" );
+        text_encr = text_encr.replace(/i/ig, "imes" );
+        text_encr = text_encr.replace(/a/ig, "ai" );
+        text_encr = text_encr.replace(/o/ig, "ober" );
+        text_encr = text_encr.replace(/u/ig, "ufat" );
+        document.write(text)
+    }
+
+    encr()
+    */
+
+    let text= "fenterlimescimesdaidenters poberr enternfrenterntair enterstenter dentersaifimesober y haibenterrlober cobernclufatimesdober cobern enterximestober!" 
+
+
+
+function desencr()
+{
+    text = text.replace(/enter/ig, "e" );
+    text = text.replace(/imes/ig, "i" );
+    text = text.replace(/ai/ig, "a" );
+    text = text.replace(/ober/ig, "o" );
+    text = text.replace(/ufat/ig, "u" );
+    document.write(text)
+}
+
+desencr()
+
+
+</script>
+
 </head>
 
 <body>
