ya funciona le encriptador

--- a/Encrypt.html
+++ b/Encrypt.html
@@ -16,14 +16,14 @@
         <div class="grid-container">
 
             <div class="grid-item1">
-                <img src="/Users/edwardabreu/Documents/code/Encrypt Alura/encriptalogo.png" alt="" >
+                <img src="encriptalogo.png" alt="" >
             </div>
 
             <div class="grid-item2">
                 <textarea class="textarea1" id="encriptar "type="text"placeholder="Ingrese el texto que deseas encriptar aquí"  > </textarea>
                <h6> Solo letras minúsculas y sin acento</h6> 
                 <div class="buttons">
-                    <input class="boton1" type="submit" value="Encriptar"></input>
+                    <input class="boton1" type="submit"  onclick="btnEncriptar()" value="Encriptar"></input>
 
                     <input class="boton2" type="submit" value="Desencriptar"></input>
     
@@ -42,6 +42,7 @@
             </div>
         </div>
     </section>
+    <script src="app.js"></script>
 </body>
 </html>
 
